[project]
name = "do_utilities"
version = "1.0.0"
description = "A package for all data ops utiliy functionalities"
authors = [
    {name = "Tony Mosolf",email = "tony@4mativ.org"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120
